Fixed the alignment issue on system user form

--- a/php/orangehrm/symfony/plugins/orangehrmAdminPlugin/web/css/systemUserSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmAdminPlugin/web/css/systemUserSuccess.css
@@ -23,3 +23,7 @@ label.error {
 }
 
 .score { float:left; margin-left:5px; padding:2px; margin-top:5px; font-weight: bold;  width:100px; text-align:center; }
+
+label, span.formLabel, span.wideFormLabel {
+    width: 135px !important;
+}
